--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
             <div class='main-container'>
 
                 <div class='face-image'>
+                    <h2 class='sim-title'>Choose A Difficulty Or View Instructions</h2>
                     <div class='display'>
-                        <div class='eyes-only-blocker hidden'></div>
-                        <h2 class='sim-title'>Choose A Difficulty Or View Instructions</h2>
                         <div class='diff-btns'>
                             <button id='modalBtn' class='blue'>Instructions</button>
                             <button class='beg green'>Beginner</button>
@@ -69,7 +68,10 @@
                             <button class='eye green'>Eyes</button>
                         </div>
                         <div class='timer'></div>
-                        <img class='sim-img' src="">
+                        <div>
+                            <div class='eyes-only-blocker hidden'></div>
+                            <img class='sim-img' src="">
+                        </div>
                         <div class='hidden sim-btns'>
                             <button class='neutral-sim-btn green'>Neutral</button>
                             <button class='happiness-sim-btn blue'>Happiness</button>
